--- a/Product.ipynb
+++ b/Product.ipynb
@@ -17,11 +17,280 @@
    "source": [
     "print(\"Hello wolrd\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "492e1d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import psycopg2\n",
+    "from psycopg2 import sql\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f211af61",
+   "metadata": {},
+   "source": [
+    "## Connect to PostgreSQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b1317d4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Connected to Railway PostgreSQL!\n",
+      "✅ Table 'laptops' created (or already exists).\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Load .env variables\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get the DB URL\n",
+    "db_url = os.getenv(\"DATABASE_URL\")\n",
+    "\n",
+    "# Connect to PostgreSQL and create table\n",
+    "try:\n",
+    "    conn = psycopg2.connect(db_url)\n",
+    "    cur = conn.cursor()\n",
+    "    print(\"✅ Connected to Railway PostgreSQL!\")\n",
+    "\n",
+    "    cur.execute(\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS laptops (\n",
+    "        id SERIAL PRIMARY KEY,\n",
+    "        title TEXT,\n",
+    "        brand TEXT,\n",
+    "        price FLOAT,\n",
+    "        shipping_price FLOAT,\n",
+    "        shipping_type TEXT,\n",
+    "        availability TEXT,\n",
+    "        seller_name TEXT,\n",
+    "        seller_rating_pct FLOAT,\n",
+    "        seller_score INT,\n",
+    "        top_rated_seller BOOLEAN,\n",
+    "        collected_at TIMESTAMP DEFAULT NOW()\n",
+    "    );\n",
+    "    \"\"\")\n",
+    "    conn.commit()\n",
+    "    print(\"✅ Table 'laptops' created (or already exists).\")\n",
+    "\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"❌ Error:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "296b5407",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "postgresql://postgres:uYgpogTeLLydSmbDelKRNbFOQPYYZiQp@crossover.proxy.rlwy.net:57820/railway\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getenv(\"DATABASE_URL\"))  # Should print the full URL\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57aa4510",
+   "metadata": {},
+   "source": [
+    "## Fetch Laptop Data from eBay API and Insert into PostgreSQL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be6983d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\" \n",
+    "We'll now:\n",
+    "🔌 Use requests to fetch laptop listings from eBay via RapidAPI\n",
+    "\n",
+    "🧹 Extract key product info from the JSON\n",
+    "\n",
+    "🗃 Insert that data into your laptops table\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2efde5d2",
+   "metadata": {},
+   "source": [
+    "### ETL Pipeline "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a3917cf",
+   "metadata": {},
+   "source": [
+    "#### Step 1: Extract — eBay API → JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a918ab64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://ebay-data-scraper.p.rapidapi.com/products\"\n",
+    "querystring = {\n",
+    "    \"product_name\": \"laptop\",\n",
+    "    \"limit\": \"20\",\n",
+    "    \"country\": \"germany\",\n",
+    "    \"buy_now\": \"true\"\n",
+    "}\n",
+    "headers = {\n",
+    "    \"x-rapidapi-key\": \"YOUR_API_KEY\",  # Replace with your key\n",
+    "    \"x-rapidapi-host\": \"ebay-data-scraper.p.rapidapi.com\"\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers, params=querystring)\n",
+    "data = response.json()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebdb5bda",
+   "metadata": {},
+   "source": [
+    "### Step 2: Transform — Clean & Normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c593ece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def clean_product(product):\n",
+    "    # Fallback brand extraction from title\n",
+    "    title = product.get(\"title\", \"\")\n",
+    "    brand = product.get(\"brand\")\n",
+    "    if not brand and title:\n",
+    "        match = re.search(r'\\b(?:Acer|Alienware|Apple|ASUS|Compaq|Dell|Fujitsu|Gateway|Getac|HP|Lenovo|LG|Microsoft|MSI|Panasonic|Razer|Samsung|Sony|Toshiba|Unbranded)\\b', title, re.I)\n",
+    "        brand = match.group(0) if match else None\n",
+    "\n",
+    "    # Shipping info\n",
+    "    shipping = product.get(\"shippingOptions\", [{}])[0]\n",
+    "    shipping_price = shipping.get(\"price\", {}).get(\"value\", 0.0)\n",
+    "    shipping_type = shipping.get(\"type\", \"\")\n",
+    "\n",
+    "    # Seller info\n",
+    "    seller = product.get(\"seller\", {})\n",
+    "\n",
+    "    return {\n",
+    "        \"title\": title,\n",
+    "        \"brand\": brand,\n",
+    "        \"price\": float(product.get(\"price\", {}).get(\"value\", 0.0)),\n",
+    "        \"shipping_price\": float(shipping_price),\n",
+    "        \"shipping_type\": shipping_type,\n",
+    "        \"availability\": product.get(\"availabilityStatus\"),\n",
+    "        \"seller_name\": seller.get(\"username\"),\n",
+    "        \"seller_rating_pct\": float(seller.get(\"feedbackPercentage\", 0.0)),\n",
+    "        \"seller_score\": int(seller.get(\"feedbackScore\", 0)),\n",
+    "        \"top_rated_seller\": seller.get(\"topRated\", False)\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb0a8641",
+   "metadata": {},
+   "source": [
+    "### Step 3: Load — Insert into PostgreSQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ac74d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load secrets\n",
+    "load_dotenv()\n",
+    "db_url = os.getenv(\"DATABASE_URL\")\n",
+    "\n",
+    "try:\n",
+    "    conn = psycopg2.connect(db_url)\n",
+    "    cur = conn.cursor()\n",
+    "    print(\"✅ Connected to PostgreSQL\")\n",
+    "\n",
+    "    for product in data.get(\"products\", []):\n",
+    "        try:\n",
+    "            cleaned = clean_product(product)\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO laptops (\n",
+    "                    title, brand, price, shipping_price, shipping_type,\n",
+    "                    availability, seller_name, seller_rating_pct, seller_score,\n",
+    "                    top_rated_seller, collected_at\n",
+    "                ) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, NOW())\n",
+    "            \"\"\", (\n",
+    "                cleaned[\"title\"], cleaned[\"brand\"], cleaned[\"price\"],\n",
+    "                cleaned[\"shipping_price\"], cleaned[\"shipping_type\"],\n",
+    "                cleaned[\"availability\"], cleaned[\"seller_name\"],\n",
+    "                cleaned[\"seller_rating_pct\"], cleaned[\"seller_score\"],\n",
+    "                cleaned[\"top_rated_seller\"]\n",
+    "            ))\n",
+    "        except Exception as e:\n",
+    "            print(\"❌ Error inserting product:\", e)\n",
+    "\n",
+    "    conn.commit()\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "    print(\"✅ All products inserted.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"❌ DB connection failed:\", e)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Webscraping",
    "language": "python",
    "name": "python3"
   },
@@ -35,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
